links de los portafolios

--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,43 @@ i{
 
 /*================ COMPONENTS =====================*/
 
+/* Loading */
+
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--background-color);
+  z-index: 101;
+  transform-origin: bottom;
+  transition: 0.5s cubic-bezier(0.51, 0.03, 0.64, 0.28);
+  transition-delay: 0.5s;
+}
+
+.loading.loaded {
+  transform: scaleY(0);
+  pointer-events: none;
+}
+
+.loading.loaded>* {
+  opacity: 0;
+}
+
+.loading >* {
+  width: 20vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.5s ease;
+}
+
+.loading .circle {
+  animation: rotate360 1.4s linear infinite;
+}
+
 /*-------------- Change Theme --------------*/
 
 /* nav theme buttons */
@@ -1418,6 +1455,17 @@ textarea.input {
 }
 /*================= KeyFrames ======================*/
 
+/* Loading rotation animation */
+
+@keyframes rotate360 {
+  0% {
+    transform: translate(-50%, -50%) rotate(0);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) rotate(1turn);
+  }
+}
 
 /* scroll up animation */
 
