--- a/css/styles.css
+++ b/css/styles.css
@@ -937,6 +937,7 @@ progress::-moz-progress-bar {
 }
 
 .portfolio__button{
+  display: inline-block;
   margin-top: 15px;
   padding: 0.4rem 0.9rem;
   font-weight: var(--fw-400);
