--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
   /* Background color */
 
   --background-color: hsl(240, 20%, 5%);
-  --second-background-color: hsl(240, 3%, 10%);
+  --second-background-color: hsl(240, 15%, 10%);
 
   /* text color */
 
@@ -51,7 +51,7 @@
   --fw-600: 600;
 
   /*----------------- LAYOUTS ------------------*/
-  --header: 70px;
+  --header: 60px;
   --container : 1200px;
 }
 
@@ -331,7 +331,7 @@ body.light-theme {
   align-items: center;
   column-gap: 0.5rem;
   background-color: var(--main-color);
-  color: var(--title-color);
+  color: hsl(240, 8%, 95%);
   padding: 0.75rem 1.4rem;
   border-radius: 0.25rem;
   font-weight: var(--fw-500);
@@ -348,16 +348,12 @@ body.light-theme {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: #51565a;
+  background-color: hsl(240, 8%, 40%);
   z-index: -1;
   transform-origin: center;
   transform: scale(0);
   border-radius: 0.25rem;
   transition: 0.3s ease;
-}
-
-.btn:hover{
-  color: hsl(240, 8%, 95%);
 }
 
 .btn:hover::after {
@@ -439,6 +435,51 @@ body.light-theme {
   width: 100%;
 }
 
+/*---------- links description names ----------*/
+
+.link-relative{
+  position: relative;
+}
+
+.link-description {
+  position: absolute;
+  left: 53%;
+  top: 0;
+  transform: translateX(-50%);
+  font-size: 0.88rem;
+  font-weight: var(--fw-500);
+  background: var(--main-color);
+  color: hsl(240, 8%, 95%);
+  padding: 5px 8px;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.link-description::before {
+  position: absolute;
+  content: "";
+  height: 8px;
+  width: 8px;
+  background: var(--main-color);
+  bottom: -3px;
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.link-relative:hover .link-description{
+  top: -38px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.home__social-link.link-relative:hover .link-description{
+  top: -32px;
+}
 
 /*------------- Scroll Up -------------*/
 
@@ -628,7 +669,7 @@ body.light-theme {
 
 .home{
   margin: 0 30px ;
-  padding-top: 90px;
+  padding-top: 100px;
   max-width: 100%;
   height: 100vh;
 }
@@ -902,6 +943,7 @@ progress::-moz-progress-bar {
 }
 
 .active-item {
+  color: hsl(240, 8%, 95%);
   background-color: var(--main-color);
 }
 
@@ -1133,6 +1175,7 @@ progress::-moz-progress-bar {
   display: inline-flex;
   align-items: center;
   color: var(--main-color);
+  font-weight: var(--fw-500);
   transition: 0.3s;
 }
 
