--- a/css/styles.css
+++ b/css/styles.css
@@ -1228,11 +1228,11 @@ progress::-moz-progress-bar {
 /* modal card */
 
 .modal__card{
-  max-width: 300px;
+  max-width: 250px;
   height: 100%;
   background-color: var(--background-color);
   border: 4px solid var(--title-color);
-  padding: 6rem 1rem 1rem;
+  padding: 5.5rem 1rem 1rem;
   position: relative;
 }
 
@@ -1255,7 +1255,7 @@ progress::-moz-progress-bar {
 }
 
 .modal__list{
-  padding: 1rem 0;
+  padding: 0.5rem 0 1rem;
 }
 
 .modal__list li{
@@ -1691,8 +1691,8 @@ textarea.input {
   }
 
   .modal__card{
-    max-width: 350px;
-    padding: 6rem 2rem 2rem;
+    max-width: 440px;
+    padding: 5rem 2rem 1.5rem;
   }
 
   /*----------------- Contact Media -------------------*/
